--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     </div>
 
   <!-- プロフィール-->
-  <div class="profile">
+  <div class="contents">
     <div class="content">
       <img src="img/aikonn.png">
       <h2 class="name">宮本 知</h2>
@@ -49,8 +49,8 @@
 <!-- ここまで -->
 
     <!-- 仕事のポリシー -->
-    <div class="policies">
-    <h2>Work Pokicy</h2>
+    <div class="contents">
+    <h2>Work Policy</h2>
     <div class="content">
       <img src="img/コミュニケーション.png">
       <h3>Communication</h3>
@@ -84,7 +84,14 @@
   <!-- ここまで -->
 
   <!--WEBに興味をもった理由 -->
+  <div class="contents">
+    <h2>WEBに興味を持ったきっかけ</h2>
+      <div class="content">
+      <p>aaa</p>
+      </div>
 
+    
+  </div>
   <!-- ここまで -->
 
   </body>
