--- a/index.html
+++ b/index.html
@@ -5,13 +5,33 @@
     <title>About Me</title>
     <link rel="stylesheet" href="about.css">
   </head>
-
+ 
   <body>
     <div class="header">
       <div class="outline">
        <div class="profile">
           <h2 class="name">About</h2>
-          <p>24years</p><br>
+          <aside>
+            <nav>
+              <ul>
+              <li>
+                <a href="https://satsan.work">
+                  <p>HOME</p>
+                </a>
+              </li>
+              <li>
+                <a href="https://satsan.work/about">
+                  <p>about</p>
+                </a>
+              </li>
+              <li>
+                 <a href="https://satsan.work/work">
+                   <p>MyWork</p>
+                  </a>
+              </li>
+              </ul>
+            </nav>
+          </aside>
         </div>
       </div>
     </div>
