--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title>About Me</title>
     <link rel="stylesheet" href="about.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans+JP:400,700" rel="stylesheet">
   </head>
  
   <body>
     <div class="header">
       <div class="outline">
        <div class="profile">
-          <h2 class="name">About</h2>
+          <h2 class="name">About Me</h2>
           <aside>
             <nav>
               <ul>
@@ -68,24 +69,29 @@
 
    <!-- 仕事のポリシー -->
     <div class="contents">
-      <h2>Work Policy</h2>
+      <h2>仕事の理念</h2>
       <div class="content">
         <img src="img/コミュニケーション.png">
             <h3>Communication</h3>
-           <p>当たり前のことですが<br>
-                仕事をする上で相手と自分の間に依頼内容の<br>
-                認識の齟齬はお互いにメリットがありません。<br>
-                ですのでお互いに積極的に意思疎通をとって<br>
-               相手の意思に沿えるよう努めます。</p>
+           <p>
+             ヘルプデスクの仕事ではお客様の問題をいかに早く<br>
+             解決することを第一にしておりました。<br>
+             そのために相手の立場になって考えるように心掛け<br>
+             相手の話したいことを引き出せるよう取り組んでおりました。             
+           </p>
      </div>
 
     <div class="content rigt">
       <img src="img/考える人.png">
-            <h3>Looking Ahead</h3>
-             <p>与えられた仕事をただこなすのではなく<br>
-                プラスαの仕事を自分で用意します。<br>
-                そのために相手の意見や仕事の意図を理解し、<br>
-                相手に本当に 必要なものを提供するよう心掛けます。</p>
+            <h3 class="left">Looking Ahead</h3>
+             <p class="left">テレビ局のADとして働いていた頃から<br>
+                仕事の効率化を図るためにチーム全体と各個人ごとの<br>
+                進捗などを意識することで<br>
+                仕事を自分で見つける<br>
+                「先を見据えた行動」が身につきました。<br>
+                この習慣は今の会社でも生かしており<br>
+                部署の残業時間の削減などの結果につながっております。<br>
+             </p>
     </div>
     
 
@@ -94,7 +100,7 @@
       <img src="img/ToDOリスト.png">
              <h3>Progress Management</h3>
             <p>仕事をする前に必ず自分のやるべきタスクを<br>
-              リストアップをして進捗の管理をします。<br>
+              リストアップをして進捗の整理をします。<br>
               「やれませんでした」という結果にならないよう<br>
               進捗から未実施のタスクがないか常に気を配ります。<br>
               また、実行が不可能と判断した場合は、<br>
