--- a/index.html
+++ b/index.html
@@ -113,9 +113,16 @@
 
   <!--WEBに興味をもった理由 -->
   <div class="contents">
-    <h2>WEBに興味を持ったきっかけ</h2>
-      <div class="content">
-      <p>aaa</p>
+    <h2>将来</h2>
+      <div class="content_reason">
+        <h3>高校時代</h3>
+          <p>文化祭の出し物の映画をきっかけに制作の仕事へ関心を持つ</p>
+
+          <h3>あああaaaaaa</h3>
+          <p>aaああああああああああああああああああああ</p>
+
+        </div>
+
       </div>
 
     
