--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <div id= "menu-btn">
            <img src="img/menu.png" alt="">
          </div>
-         <h2>About Me</h2>          
+         <h2>Satoru Miyamoto</h2>          
          <aside id="side-menu">
            <div id="close-btn">
             <img src="img/close.png" alt="">
@@ -40,6 +40,21 @@
         </div>
       </div>
     </div>
+
+<!-- あいさつ -->
+    <div class="box">
+      <div class="box_contents">
+        <img src="img/myimage.jpeg" alt="">
+        <div class="box_text">
+          こんにちわ
+        </div>
+      </div>
+    </div>
+
+
+<!-- あいさつここまで -->
+
+
   <!-- プロフィール-->
   <div class="contents">
     <h2>経歴</h2>
